Still fixing carousel:sliding issues; Removed transition glitches disabling backface visibility

--- a/src/index.less
+++ b/src/index.less
@@ -48,3 +48,9 @@
         opacity: 1;
     }
 }
+
+
+* {
+    // Transitions look better with this disabled
+    backface-visibility: hidden;
+}
